package com.bcnc.inditex_pricing_service.application;

public class PriceService {
}
