package com.bcnc.inditex_pricing_service.domain.exception;

public class NoApplicablePriceException {
}
