package com.bcnc.inditex_pricing_service.domain.port.output;

public class PriceRepository {
}
