package com.bcnc.inditex_pricing_service.infrastructure.controller;

public class PriceController {
}
