package com.bcnc.inditex_pricing_service.infrastructure.persistence.mapper;

public class PriceEntityMapper {
}
