package com.bcnc.inditex_pricing_service.infrastructure.persistence.repository;

public class JpaPriceRepository {
}
